# opentelemetry-demo

./: datadog-agent-config.yaml  datadog.env  docker-compose-datadog.yml  docker-compose.yml  migrate-to-datadog.sh
src/ad/: Dockerfile  build.gradle  datadog.properties
src/cart/src/: Program.cs  cart.csproj
src/cart/src/cartstore/: ValkeyCartStore.cs
src/cart/src/services/: CartService.cs
src/checkout/: Dockerfile  datadog.go  go.mod  main.go
src/currency/: CMakeLists.txt  Dockerfile
src/currency/src/: datadog_client.cpp  datadog_client.h  server.cpp
src/email/: Dockerfile  Gemfile  email_server.rb
src/fraud-detection/: Dockerfile
src/frontend/: next.config.js  package-lock.json  package.json
src/frontend/pages/: _app.tsx
src/frontend/providers/: DataDogProvider.tsx
src/frontend/utils/telemetry/: DataDogInstrumentation.js  DataDogTracer.ts  FrontendTracer.ts  (+2 more)
src/kafka/: Dockerfile
src/otel-collector/: Dockerfile  supervisor_docker.yaml  supervisor_docker.yml
src/payment/: charge.js  datadog.js  index.js  logger.js  opentelemetry.js  package-lock.json  package.json
src/product-catalog/: Dockerfile  datadog.go  go.mod  go.sum  main_datadog.go
src/quote/: composer.json  datadog.php
src/quote/public/: index.php
src/recommendation/: Dockerfile  datadog_instrumentation.py  logger.py  recommendation_server.py  requirements.txt
src/shipping/: Cargo.toml
src/shipping/src/: datadog.rs  main.rs
src/shipping/src/shipping_service/: quote.rs
src/wishlist/: Dockerfile  add.js  index.js  logger.js  package-lock.json  package.json
(+1 files in other folders)
